<resources>
    <string name="app_name">Procesos de Validacion Pendientes</string>
    <string name="lisVal_titulo">Listado de Validaciones pendientes</string>
    <string name="bt_verDetalle">Mostrar detalle de validación</string>
    <string name="bt_actualizarVal">Actualizar</string>
    <string name="bt_salirVal">Salir</string>
    <string name="bt_entrarVal">Validar</string>
    <string name="txtCorreo">ejemplo@uta.edu.ec</string>
    <string name="txtPassword">Ingrese Contraseña</string>
    <string name="btnIngresa">Ingresar</string>
</resources>
